nixos/manifests/cec-creds/resources/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cec-creds-backend
spec:
  type: ClusterIP
  selector:
    app: cec-creds-backend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
---
apiVersion: v1
kind: Pod
metadata:
  name: cec-creds-backend
  labels:
    app: cec-creds-backend
spec:
  restartPolicy: Always
  containers:
    - name: cec-creds-backend
      image: dclandau/cec-creds-backend:bcfb0fc
      volumeMounts:
        - name: credentials
          mountPath: /etc/credentials
          readOnly: true
        - name: db
          mountPath: /data/db
  volumes:
    - name: credentials
      emptyDir: {}
    - name: creds-key
      secret:
        secretName: creds-key
        items:
          - key: creds-key
            path: creds-key
    - name: db
      persistentVolumeClaim:
        claimName: cec-creds-backend-pvc 
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cec-creds-backend
spec:
  parentRefs:
    - name: eg
      sectionName: https.creds.cec.dlandau.nl
  hostnames:
    - "creds.cec.dlandau.nl"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cec-creds-backend
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /api
