nixos/manifests/cec-creds/resources/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: cec-creds-frontend
spec:
  type: ClusterIP
  selector:
    app: cec-creds-frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cec-creds-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cec-creds-frontend
  template:
    metadata:
      labels:
        app: cec-creds-frontend
    spec:
      containers:
      - name: cec-creds-frontend
        image: dclandau/cec-creds-frontend:ccfebc5
        ports:
        - containerPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cec-creds-frontend-redirect
spec:
  parentRefs:
    - name: eg
      sectionName: http
  hostnames:
    - "creds.cec.dlandau.nl"
  rules:
    # Let ACME HTTP-01 challenges through untouched
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/acme-challenge/
      backendRefs:
        - group: ""
          kind: Service
          name: cec-creds-frontend
          port: 80
    # Redirect everything else to HTTPS
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cec-creds-frontend
spec:
  parentRefs:
    - name: eg
      sectionName: https.creds.cec.dlandau.nl
  hostnames:
    - "creds.cec.dlandau.nl"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cec-creds-frontend
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
